--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
+    "stimulus-carousel": "^5.0.1",
+    "swiper": "^9.2.2",
     "webpack": "^5.78.0",
     "webpack-cli": "^5.0.1"
   },
