--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
+    "sass-loader": "^13.2.2",
+    "stimulus": "^3.2.1",
     "stimulus-carousel": "^5.0.1",
     "swiper": "^9.2.2",
     "webpack": "^5.78.0",
@@ -13,5 +15,9 @@
   },
   "scripts": {
     "build": "webpack --config webpack.config.js"
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.2"
   }
 }
