--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
+    "devise": "^1.0.9",
     "sass-loader": "^13.2.2",
     "stimulus": "^3.2.1",
     "stimulus-carousel": "^5.0.1",
